--- a/betterRss/templates/betterRss/rss.html
+++ b/betterRss/templates/betterRss/rss.html
@@ -9,8 +9,8 @@
             {% if item.link %}<link>{{ item.link }}</link>{% endif %}
             {% if item.published %}<pubDate>{{ item.published }}</pubDate>{% endif %}
             {% if item.author %}<author>{{ item.author }}</author>{% endif %}
-            {% if item.summary or item.image or item.nlp_summary %}<description>
-                <![CDATA[{{ item.summary|safe }}{% if item.image %}<img src="{{ item.image }}" />{% endif %}{{ item.nlp_summary }}]]>
+            {% if item.nlp_summary or item.summary or item.image %}<description>
+                <![CDATA[{% if item.nlp_summary %}<p>{{ item.nlp_summary }}</p>{% endif %}{{ item.summary|safe }}{% if item.image %}<img src="{{ item.image }}" />{% endif %}]]>
             </description>{% endif %}
         </item>
         {% endfor %}
