--- a/betterRss/templates/betterRss/rss_header.html
+++ b/betterRss/templates/betterRss/rss_header.html
@@ -1,5 +1,5 @@
 <rss version="2.0">
     <channel>
-        <title>{{ title|safe }}</title>
+        <title>{{ title }}</title>
         <link>{{ url }}</link>
-        <description>{{ description|safe }}</description>
+        <description>{{ description }}</description>
